# pocketbase_orm

./: README.md  example.py  justfile  pocketbase_orm.py  pyproject.toml
.github/workflows/: create-release.yml  publish-pypi.yml  tests.yml
tests/: test_pocketbase_orm.py
