[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[project]
dependencies = [
  "pocketbase @ git+https://github.com/knowsuchagency/pocketbase.git@update-collection-field",
  "pydantic[email]>=2.10.6",
]
description = "Add your description here"
dynamic = ["version"]
license = {file = "LICENSE"}
name = "pocketbase-orm"
readme = "README.md"
requires-python = ">=3.11"

[dependency-groups]
dev = [
  "pytest>=8.3.4",
]
